# Pixl

./: CMakeLists.txt  README.md
Pixl/: CMakeLists.txt
Pixl/include/Pixl/: Components.h  Pixl.h
Pixl/include/Pixl/Components/: CameraProjectionComponent.h  ColliderComponent.h  MeshComponent.h  RigidBodyComponent.h  Transform.h  TransformComponent.h
Pixl/include/Pixl/Core/: Application.h  Base.h  ECS.h  EntryPoint.h  Input.h  KeyCodes.h  MouseCodes.h  Window.h
Pixl/include/Pixl/Core/ECS/: ISystem.h  Scene.h  SceneManager.h  SystemManager.h
Pixl/include/Pixl/Core/Layer/: Layer.cpp  Layer.h  LayerStack.h
Pixl/include/Pixl/Core/Resource/: FileTextureLoader.h  IResourceLoader.h  Resource.h  ResourceCache.h  ResourceHandle.h  ResourceManager.h  ResourceService.h  TextureLoader.h
Pixl/include/Pixl/Core/Resource/Loaders/: IResourceLoader.h  MaterialLoader.h  ShaderLoader.h  TextureLoader.h
Pixl/include/Pixl/Core/Time/: Clock.cpp  Clock.h  Scheduler.h  Time.h  Timer.h
Pixl/include/Pixl/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
Pixl/include/Pixl/Graphics/Rendering/: RenderCommand.h  Renderer.h  Shader.h
Pixl/include/Pixl/Graphics/Rendering/Camera/: ICamera.h
Pixl/include/Pixl/Graphics/Rendering/Objects/: Buffer.h  VertexArray.h
Pixl/include/Pixl/Graphics/Rendering/Renderer/: Renderer.h
Pixl/include/Pixl/Math/: Vector2.h  Vector2.inl  Vector3.h  Vector3.inl
Pixl/include/Pixl/Rendering/: GraphicsContext.h  RenderCommand.h  Shader.h
Pixl/include/Pixl/Rendering/Camera/: BaseCamera.h  ICamera.h  OrthographicCamera.h  PerspectiveCamera.h
Pixl/include/Pixl/Rendering/Camera/Controller/: BaseCameraController.h  FPSController.h  ICameraController.h  OrbitController.h
Pixl/include/Pixl/Rendering/Geometry/: CubeGeometry.h  Geometry.h  IGeometry.h
Pixl/include/Pixl/Rendering/Material/: ColorMaterial.h  IMaterial.h  Material.h  UnlitMaterial.h  VertexColorMaterial.h
Pixl/include/Pixl/Rendering/Materials/: BasicMaterial.h  IMaterial.h
Pixl/include/Pixl/Rendering/Mesh/: BaseMesh.h  IMesh.h  Mesh.h  MultiMaterialMesh.h  StaticMesh.h
Pixl/include/Pixl/Rendering/Objects/: Buffer.h  ComponentType.h  Shader.h  ShaderData.h  ShaderReflection.h  Texture.h  VertexArray.h  VertexAttributeType.h  VertexDeclaration.h  VertexFormat.h  VertexLayout.h
Pixl/include/Pixl/Rendering/Renderer/: Renderer.h
Pixl/include/Pixl/Systems/: PhysicsSystem.h  RenderSystem.h  TransformSsytem.h  TransformSystem.h
Pixl/include/Pixl/Utils/: Logger.h  PrefabRegistery.h
Pixl/src/Pixl/Core/: Application.cpp  Input.cpp  Window.cpp
Pixl/src/Pixl/Core/ECS/: SceneManager.cpp
Pixl/src/Pixl/Core/Layer/: Layer.cpp  LayerStack.cpp
Pixl/src/Pixl/Core/Resource/: FileTextureLoader.cpp  ResourceService.cpp  TextureLoader.cpp
Pixl/src/Pixl/Core/Resource/Loaders/: MaterialLoader.cpp  ShaderLoader.cpp  TextureLoader.cpp
Pixl/src/Pixl/Core/Time/: Clock.cpp  Scheduler.cpp  Time.cpp  Timer.cpp
Pixl/src/Pixl/Graphics/Rendering/: GraphicsContext.cpp  RenderCommand.cpp  Renderer.cpp  Shader.cpp
Pixl/src/Pixl/Graphics/Rendering/Camera/: PerspectiveCamera.cpp
Pixl/src/Pixl/Graphics/Rendering/Objects/: VertexArray.cpp  VertexBuffer.cpp
Pixl/src/Pixl/Graphics/Rendering/Renderer/: Renderer.cpp
Pixl/src/Pixl/Rendering/: GraphicsContext.cpp  RenderCommand.cpp  Shader.cpp
Pixl/src/Pixl/Rendering/Camera/: BaseCamera.cpp  OrthographicCamera.cpp  PerspectiveCamera.cpp
Pixl/src/Pixl/Rendering/Camera/controller/: BaseCameraController.cpp  FPSController.cpp  OrbitController.cpp
Pixl/src/Pixl/Rendering/Geometry/: CubeGeometry.cpp  Geometry.cpp
Pixl/src/Pixl/Rendering/Material/: ColorMaterial.cpp  Material.cpp  UnlitMaterial.cpp  VertexColorMaterial.cpp
Pixl/src/Pixl/Rendering/Materials/: BasicMaterial.cpp
Pixl/src/Pixl/Rendering/Mesh/: BaseMesh.cpp  Mesh.cpp  MultiMaterialMesh.cpp  StaticMesh.cpp
Pixl/src/Pixl/Rendering/Objects/: Buffer.cpp  Shader.cpp  ShaderReflection.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexDeclaration.cpp  VertexFormat.cpp  VertexLayout.cpp
Pixl/src/Pixl/Rendering/Renderer/: Renderer.cpp
Pixl/src/Pixl/Systems/: PhysicsSystem.cpp  RenderSystem.cpp  TransformSystem.cpp
Pixl/src/Pixl/Utils/: Logger.cpp  PrefabRegistery.cpp
SandBox/: CMakeLists.txt
SandBox/assets/materials/: TestMaterial.json  ToonMaterial.json
SandBox/assets/shaders/: ColorUnlitShader.frag  ColorUnlitShader.json  ColorUnlitShader.vert  ToonShader.frag  ToonShader.json  ToonShader.vert  basic.json
SandBox/assets/textures/: albedo.json
SandBox/include/: MeshTestLayer.h  SandBox.h
SandBox/include/layers/: AnimationTransformTestLayer.h  CameraTestLayer.h  EnttTestLayer.h  HueExempleLayer.h  MeshTestLayer.h  ResourceLoadingTestLayer.h  ResourceTestLayer.h
SandBox/resources/: albedo.tpx  frag.glsl  vert.glsl
SandBox/src/: MeshTestLayer.cpp  SandBox.cpp  buffersTest.cpp  main.cpp  meshTest.cpp  multiMaterialMeshTest.cpp  staticMeshTest.cpp
SandBox/src/layers/: AnimationTransformTestLayer.cpp  CameraTestLayer.cpp  EnttTestLayer.cpp  HueExempleLayer.cpp  MeshTestLayer.cpp  ResourceLoadingTestLayer.cpp  ResourceTestLayer.cpp
